z-index fix

--- a/shared/js/cyph/components/account/account.component.scss
+++ b/shared/js/cyph/components/account/account.component.scss
@@ -106,7 +106,7 @@
 	}
 
 	.header, .sidebar {
-		z-index: 1;
+		z-index: 3;
 	}
 }
 
